fix: Arrumando caminho dos arquivos