@@ -9,24 +9,26 @@ import javafx.stage.Stage;
 import javafx.stage.Window;
 
 import java.io.IOException;
+import java.util.Objects;
 
 public class InicioController {
 
     @FXML
     private void abrirLogin(ActionEvent event) {
-        trocarCena("src/main/resources/Login.fxml", "Login - BioMeasure");
+        trocarCena("/Login.fxml", "Login - BioMeasure");
     }
 
     @FXML
     private void abrirCadastro(ActionEvent event) {
-        trocarCena("src/main/resources/Cadastro.fxml", "Cadastro - BioMeasure");
+        trocarCena("/Cadastro.fxml", "Cadastro - BioMeasure");
     }
 
-    // 🔹 Método utilitário para trocar telas
+
+
     private void trocarCena(String caminhoFxml, String tituloJanela) {
         try {
-            Stage stage = (Stage) Stage.getWindows().filtered(Window::isShowing).get(0);
-            Parent root = FXMLLoader.load(getClass().getResource(caminhoFxml));
+            Stage stage = (Stage) Stage.getWindows().filtered(Window::isShowing).getFirst();
+            Parent root = FXMLLoader.load(Objects.requireNonNull(getClass().getResource(caminhoFxml)));
             stage.setScene(new Scene(root));
             stage.setTitle(tituloJanela);
             stage.show();
@@ -34,4 +36,5 @@ public class InicioController {
             e.printStackTrace();
         }
     }
+
 }
